# py-template

./: README.md  bump_version.sh  generate_requirements.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
py_template/: __init__.py  __main__.py  app.py
py_template/core/: __init__.py  foo.py
tests/: __init__.py  test_all.py
