[tool.poetry]
name = "py-template"
version = "0.1.0"
description = "Barebones Python project template"
authors = ["ryouze <mirai@ryouze.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
loguru = "*"

[tool.poetry.group.dev]
# Ensure that `poetry install` does not install dev dependencies by default; they should only be installed with `poetry install --with dev`
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[tool.poetry.scripts]
py-template = "py_template.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
