[project]
name = "py-template"
dynamic = ["version"]
description = "Barebones Python project template"
authors = [
    {name = "ryouze", email = "mirai@ryouze.net"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)"
]

[project.scripts]
# Run the app using `poetry run py-template`
py-template = "py_template.__main__:main"

[tool.poetry]
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry.group.dev]
# Ensure that `poetry install` does not install dev dependencies by default; they should only be installed with `poetry install --with dev`
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
